[add & update] Process signup for array

--- a/signup.html
+++ b/signup.html
@@ -10,7 +10,8 @@
     
     <h1>Signup Account!</h1>
 
-    <form action="process-signup.php" method="post" id="signup"></form>
+    <!-- write a form -->
+    <form action="process-signup.php" method="post" id="signup" novalidate>
 
     <div>
         <label for="name">Name</label>
@@ -33,6 +34,8 @@
     </div>
 
     <button>Sign up!</button>
+
+    </form>
 
 </body>
 </html>
